<resources>
    <string name="app_name">Expiry Date Tracker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home Page</string>
    <string name="second_fragment_label">Add a New Item</string>
    <string name="next">Next</string>

    <string name="Upcoming_FoodList">Upcoming Expiring Items</string>
    <string name="Categories_FoodList">Categories</string>
    <string name="Add_Item">Add New Item</string>
    <string name="Add_New_Item">Add a New Item</string>
    <string name="Item_Name">Item Name: </string>
    <string name="Item_Name_Hint">E.g. Reese Buttercups</string>
    <string name="Expiry_Date">Expiry Date: </string>
    <string name="Expiry_Date_Hint">MM/DD/YYYY</string>
    <string name="Notification">Notification: </string>
    <string name="ON">ON</string>
    <string name="OFF">OFF</string>
    <string name="Set_Default">Set as default</string>
    <string name="Category">Category (optional): </string>
    <string name="Category_Hint">E.g. Snacks, Canned Goods, etc.</string>
    <string name="Save">Save</string>

    <string name="SearchButton">Search</string>
    <string name="SearchTitle">Search</string>
    <string name="SearchHint">Search for items, categories, expiry dates, etc.</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>