<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/Add_New_Item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Add_New_Item"
        android:textColor="@color/green05"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/saveItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ItemName"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Item_Name"
        android:textColor="@color/green05"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ExpiryDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Add_New_Item" />

    <TextView
        android:id="@+id/ExpiryDate"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/Expiry_Date"
        android:textColor="@color/green05"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ItemName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="40dp"
        android:textColorHint="@color/darkGrey"
        app:boxBackgroundColor="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/Date_Input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Add_New_Item"
        app:layout_constraintVertical_bias="0.5"
        app:placeholderTextColor="@color/darkGrey">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/Item_Name_Hint"
            android:inputType="text"
            android:selectAllOnFocus="false"
            android:textColor="@color/black"
            android:textColorHighlight="@color/darkGrey"
            android:textColorHint="@color/darkGrey"
            android:textColorLink="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/Date_Input"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/Expiry_Date_Hint"
        android:importantForAutofill="no"
        android:inputType="date"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textAlignment="inherit"
        android:textColorHint="@color/darkGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/Notification"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/Notification"
        android:textColor="@color/green05"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ExpiryDate" />

    <CheckBox
        android:id="@+id/SetDefault"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green06"
        android:buttonTint="@color/green06"
        android:checked="true"
        android:text="@string/Set_Default"
        android:textColor="#2E7D32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Notification"
        tools:ignore="TextContrastCheck" />

    <ToggleButton
        android:id="@+id/NotifButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/light03"
        android:checked="true"
        android:shadowColor="@color/green00"
        android:text="@string/ON"
        android:textOff="@string/OFF"
        android:textOn="@string/ON"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Date_Input" />

    <TextView
        android:id="@+id/Category"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Category"
        android:textColor="@color/green05"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/saveItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SetDefault"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        app:boxBackgroundColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/saveItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NotifButton"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Category_Hint"
            android:inputType="text"
            android:textColorHint="@color/darkGrey"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>